// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`legacy > Partial queries yield lower scores 1`] = `
[
  [
    "t",
    "h",
    "e",
    " ",
    "a",
    "m",
    "a",
    "z",
    "i",
    "n",
    "g",
    " ",
    "s",
    "p",
    "i",
    "d",
    "e",
    "r",
  ],
  [
    "t",
    "h",
    "e",
    " ",
    "a",
    "m",
    "a",
    "z",
    "i",
    "n",
    "g",
    " ",
    "s",
    "p",
    "i",
    "d",
    "e",
    "r",
    "-",
    "m",
    "a",
    "n",
  ],
  [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
  ],
  true,
  [
    3,
    3,
    3,
    4,
    11,
    11,
    11,
    11,
    11,
    11,
    11,
    12,
    18,
    18,
    18,
    18,
    18,
    18,
    19,
    22,
    22,
    22,
  ],
]
`;

exports[`legacy > Partial queries yield lower scores 2`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
]
`;

exports[`legacy > Partial queries yield lower scores 3`] = `
[
  [
    "t",
    "h",
    "e",
    " ",
    "a",
    "m",
    "a",
    "z",
    "i",
    "n",
    "g",
  ],
  [
    "t",
    "h",
    "e",
    " ",
    "a",
    "m",
    "a",
    "z",
    "i",
    "n",
    "g",
    " ",
    "s",
    "p",
    "i",
    "d",
    "e",
    "r",
    "-",
    "m",
    "a",
    "n",
  ],
  [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
  ],
  true,
  [
    3,
    3,
    3,
    4,
    11,
    11,
    11,
    11,
    11,
    11,
    11,
    12,
    18,
    18,
    18,
    18,
    18,
    18,
    19,
    22,
    22,
    22,
  ],
]
`;

exports[`legacy > Partial queries yield lower scores 4`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
]
`;

exports[`legacy > Partial queries yield lower scores 5`] = `
[
  [
    "t",
    "h",
    "e",
  ],
  [
    "t",
    "h",
    "e",
    " ",
    "a",
    "m",
    "a",
    "z",
    "i",
    "n",
    "g",
    " ",
    "s",
    "p",
    "i",
    "d",
    "e",
    "r",
    "-",
    "m",
    "a",
    "n",
  ],
  [
    0,
    1,
    2,
  ],
  true,
  [
    3,
    3,
    3,
    4,
    11,
    11,
    11,
    11,
    11,
    11,
    11,
    12,
    18,
    18,
    18,
    18,
    18,
    18,
    19,
    22,
    22,
    22,
  ],
]
`;

exports[`legacy > Partial queries yield lower scores 6`] = `
[
  0,
  1,
  2,
]
`;

exports[`legacy > exact match 1`] = `
[
  [
    "t",
    "h",
    "i",
    "s",
    " ",
    "i",
    "s",
    " ",
    "e",
    "x",
    "a",
    "c",
    "t",
    "l",
    "y",
    " ",
    "t",
    "h",
    "e",
    " ",
    "s",
    "a",
    "m",
    "e",
    " ",
    "s",
    "e",
    "a",
    "r",
    "c",
    "h",
    " ",
    "a",
    "n",
    "d",
    " ",
    "t",
    "a",
    "r",
    "g",
    "e",
    "t",
  ],
  [
    "t",
    "h",
    "i",
    "s",
    " ",
    "i",
    "s",
    " ",
    "e",
    "x",
    "a",
    "c",
    "t",
    "l",
    "y",
    " ",
    "t",
    "h",
    "e",
    " ",
    "s",
    "a",
    "m",
    "e",
    " ",
    "s",
    "e",
    "a",
    "r",
    "c",
    "h",
    " ",
    "a",
    "n",
    "d",
    " ",
    "t",
    "a",
    "r",
    "g",
    "e",
    "t",
  ],
  [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    27,
    28,
    29,
    30,
    31,
    32,
    33,
    34,
    35,
    36,
    37,
    38,
    39,
    40,
    41,
  ],
  true,
  [
    4,
    4,
    4,
    4,
    5,
    7,
    7,
    8,
    15,
    15,
    15,
    15,
    15,
    15,
    15,
    16,
    19,
    19,
    19,
    20,
    24,
    24,
    24,
    24,
    25,
    31,
    31,
    31,
    31,
    31,
    31,
    32,
    35,
    35,
    35,
    36,
    42,
    42,
    42,
    42,
    42,
    42,
  ],
]
`;

exports[`legacy > exact match 2`] = `
[
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
]
`;

exports[`legacy > scoring 1`] = `
[
  [
    "n",
    "o",
    "t",
    "e",
  ],
  [
    "n",
    "o",
    "d",
    "e",
    "/",
    "n",
    "o",
    "t",
    "e",
  ],
  [
    0,
    1,
    7,
    8,
  ],
  true,
  [
    4,
    4,
    4,
    4,
    5,
    7,
    7,
    9,
    9,
  ],
]
`;

exports[`legacy > scoring 2`] = `
[
  0,
  1,
  7,
  8,
]
`;

exports[`legacy > scoring 3`] = `
[
  [
    "n",
    "o",
    "t",
    "e",
  ],
  [
    "n",
    "o",
    "t",
    " ",
    "o",
    "n",
    "e",
    " ",
    "t",
    "h",
    "a",
    "t",
    " ",
    "e",
    "v",
    "e",
    "n",
    "i",
    "n",
    "g",
  ],
  [
    0,
    1,
    2,
    13,
  ],
  true,
  [
    3,
    3,
    3,
    4,
    7,
    7,
    7,
    8,
    12,
    12,
    12,
    12,
    13,
    20,
    20,
    20,
    20,
    20,
    20,
    20,
  ],
]
`;

exports[`legacy > scoring 4`] = `
[
  0,
  1,
  2,
  13,
]
`;

exports[`legacy > substring not at start of word 1`] = `
[
  [
    "e",
    "r",
    ".",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
  ],
  [
    "d",
    "e",
    "v",
    "i",
    "c",
    "e",
    "-",
    "t",
    "r",
    "a",
    "c",
    "k",
    "e",
    "r",
    ".",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
    "_",
    "i",
    "p",
    "h",
    "o",
    "n",
    "e",
    "_",
    "6",
  ],
  [
    1,
    8,
    14,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
  ],
  false,
  [
    6,
    6,
    6,
    6,
    6,
    6,
    7,
    14,
    14,
    14,
    14,
    14,
    14,
    14,
    15,
    22,
    22,
    22,
    22,
    22,
    22,
    22,
    23,
    29,
    29,
    29,
    29,
    29,
    29,
    30,
    31,
  ],
]
`;

exports[`legacy > substring not at start of word 2`] = `
[
  1,
  8,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
]
`;

exports[`legacy > substring not at start of word 3`] = `
[
  [
    "e",
    "r",
    ".",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
  ],
  [
    "s",
    "e",
    "n",
    "d",
    "o",
    "r",
    ".",
    "b",
    "a",
    "t",
    "t",
    "e",
    "r",
    "y",
    "_",
    "l",
    "i",
    "f",
    "e",
    "3",
    "6",
    "0",
    "_",
    "i",
    "p",
    "h",
    "o",
    "n",
    "e",
    "_",
    "6",
  ],
  [
    1,
    5,
    6,
    15,
    16,
    17,
    18,
    19,
    20,
    21,
  ],
  false,
  [
    6,
    6,
    6,
    6,
    6,
    6,
    7,
    14,
    14,
    14,
    14,
    14,
    14,
    14,
    15,
    22,
    22,
    22,
    22,
    22,
    22,
    22,
    23,
    29,
    29,
    29,
    29,
    29,
    29,
    30,
    31,
  ],
]
`;

exports[`legacy > substring not at start of word 4`] = `
[
  1,
  5,
  6,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
]
`;
